--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    color: var(--orange);
+    color: var(--black);
     font-family: 'Finger Paint', cursive;
 }
 h1 {
@@ -41,10 +41,10 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--orange);
+    color: var(--black);
     font-size: 120px;
-    border-right: 2px solid;
-    border-bottom: 2px solid;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
 }
 .box:nth-child(3n) {
     border-right: none;
@@ -55,14 +55,13 @@ h1 {
 button {
     padding: 10px 20px;
     border-radius: 10px;
-    background-color: var(--orange);
+    background-color: var(--black);
     color: #333;
-    border-color: var(--orange);
-    font-size: 18px;
-    transition: 200ms transform;
-    font-weight: 600;
+    border-color: var(--black);
+    font-size: 20px;
+     font-weight: 600;
 }
 button:hover {
     cursor: pointer;
-    transform: translateY(-2px);
+    transform: translateY(-3px);
 }
