--- a/style.css
+++ b/style.css
@@ -1,67 +1,49 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-:root {
-    --orange: #F2C14E;
-    --winning-blocks: #2d414b;
-
-}
-
 body {
-    color: var(--black);
-    font-family: 'Finger Paint', cursive;
-}
-h1 {
-    font-size: 54px;
-    text-transform: uppercase;
+    font-family: "Arial", sans-serif;
 }
 
-.container {
-    padding: 40px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #37505C;
+section {
+    text-align: center;
 }
 
-#gameboard {
-    width: 300px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 40px;
-}
-.box {
-    height: 100px;
+.cell {
+    font-family: "Permanent Marker", cursive;
     width: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--black);
-    font-size: 120px;
-    border-right: 1px solid;
-    border-bottom: 1px solid;
-}
-.box:nth-child(3n) {
-    border-right: none;
-}
-.box:nth-child(6) ~ .box {
-    border-bottom: none;
-} 
-button {
-    padding: 10px 20px;
-    border-radius: 10px;
-    background-color: var(--black);
-    color: #333;
-    border-color: var(--black);
-    font-size: 20px;
-     font-weight: 600;
-}
-button:hover {
+    height: 100px;
+    box-shadow: 2px 2px 2px 2px #ecd7ba;
+    border: 2px solid #ecd7ba;
     cursor: pointer;
-    transform: translateY(-3px);
+    line-height: 100px;
+    font-size: 60px;
+}
+
+.game--title {
+    font-size: 100px;
+    color: #d7a62f;
+    margin: 10px auto;
+}
+
+.game--container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 306px;
+    margin: 10px auto;
+    background-color: #11213a;
+    color: #04c0b2;
+}
+
+.game--status {
+    font-size: 50px;
+    color: #d7a62f;
+    margin: 20px auto;
+}
+
+.game--restart {
+    background-color: #f7e4ac;
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+    color: #5586e2;
+    box-shadow: 2px 2px 2px 2px #d86c23;
+    border: 2px solid #d86c23;
 }
